--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <div id="menu-bar">
     <a href="index.html">Home</a>
     <a href="#">About</a>
-    <a href="#">Contact</a>
+    <a href="#">Contact US</a>
     </div>
         <h1>Home page</h1>
         <h2>This is a heading</h2>
