--- a/links.html
+++ b/links.html
@@ -6,7 +6,7 @@
     <body>
         <div id="menu-bar">
             <a href="index.html">Home</a>
-            <a href="#">About</a>
+            <a href="#">About Us</a>
             <a href="#">Contact</a>
         </div>
 
